--- a/assets/dem/doc_manager.css
+++ b/assets/dem/doc_manager.css
@@ -12,6 +12,7 @@
 
 
 body{
+color:white;
 display:flex;
 flex-direction:column;
 background-color:var(--background);
@@ -29,11 +30,16 @@ margin-bottom:7px;
 
 .main-box{
 display:flex;
+flex-direction:column;
 justify-content: center; /* Center horizontally */
 align-items: center; /* Center vertically */
 }
 .form-box{
-width: 40%;
+margin-top:2%;
+background-color:var(--tiles-background);
+padding:10px;
+width:90%;
+
 }
 
 .photo-box{
@@ -44,11 +50,30 @@ justify-content:center;
 border-radius:3px;
 padding:10px;
 background-color:var(--tiles-background);
-width: 60%;
+width: 90%;
 height:100%;
 }
 
 img {
     height: 100%; /* Set the height of the image */
     width: 90%; /* Set the width of the image */
+}
+.form-inputs{
+display:flex;
+justify-content:space-around;
+margin-top:2%;
+}
+.di{
+max-height : 100px;
+max-width: 100px;
+}
+
+
+.cards {
+display flex;
+justify-content:space-around;
+flex-direction:row;
+align-items: center;
+margin:10px;
+background-color:darkred;
 }
