--- a/Templates/Docma_viewer.html
+++ b/Templates/Docma_viewer.html
@@ -5,47 +5,43 @@
    <meta  charset="UTF-8" name="viewport" content=" initial-scale= 0.6">
     <title>Welcome Home!</title>
     <link rel="stylesheet" href="{% static 'dem/docma_viewer_styles.css' %}">
-<!--    <link rel="stylesheet" href="{% static 'docma_static/doc_viewer_style.css' %}">-->
 
 </head>
+
 <body class="page">
-<div class="nav-bar">
-
-<div class = "home">
- <a href = '/home/'>Home/</a>
- <a href = '/doc_manager/'>Document Category</a>
-
-</div>
-    <div class = "filter-bar">
-    <a href="/doc_manager/add_doc/">Add</a>
+    <div class="nav-bar">
+        <div class = "home">
+            <a href = '/home/'>Home /</a>
+             <a href = '/doc_manager/'>Document Category</a>
+        </div>
+        <div class = "home-button">
+            <a href = 'add_doc/'>Add Document</a>
+             <a href = '/admin/DOCMA/docma/'>Manage Docs</a>
+        </div>
     </div>
-</div>
+    <div class="view-block">
+        {% for name, details in data.items %}
+        <div class="doc-details">
+           <label>Holder: {{ name }}</label>
+           <label>Refnum:{{ details.refnum }}</label>
+           <label>Valid upto:{{ details.valid }}</label>
+            <a href = '/admin/DOCMA/docma/{{ details.doc_id }}/change/'> Edit </a>
 
-<div class="view-block">
-    {% for name, details in data.items %}
-    <div class="doc-details">
-       <label>{{ name }}</label>
-       <label>{{ details.refnum }}</label>
-       <label>{{ details.valid }}</label>
+        </div>
+        <div class="doc-card">
+            {% for path in details.file_path %}
+
+            {% if path.1 == 'pdf' %}
+<!--             <object data="{% static path.0 %}" type="application/pdf" width="100%" height="600px">-->
+             <iframe id="displayedPdf" src="{% static path.0 %}" height = "300px" ></iframe>
+            {% else %}
+             <img  src="{% static path.0 %}" height = "300px"  alt="Selected Image"></img>
+            {% endif %}
+            {% endfor %}
+        </div>
+    {% endfor %}
     </div>
-    <div class="doc-card">
-        {% for path in details.file_path %}
-        <label>{{ path }}</label>
-        <img id="displayedImage" src="{% static path %}"  alt="Selected Image" >
-        {% endfor %}
-    </div>
-{% endfor %}
 
-<!--{% for name, details in data.items %}-->
-<!--        <h2>{{ details }}</h2>-->
-<!--        <ul>-->
-<!--            {% for path in details.file_path %}-->
-<!--                <li>{{ path }}</li>-->
-<!--            {% endfor %}-->
-<!--        </ul>-->
-<!--    {% endfor %}-->
-
-</div>
 
 </body>
 </html>
