--- a/Templates/doc_manager.html
+++ b/Templates/doc_manager.html
@@ -10,6 +10,16 @@
 
 
 <body>
+<div class="nav-bar">
+
+<div class = "home">
+    <a href = '/home/'>Home /</a>
+    <a href = '/doc_manager/'>Document Category</a>
+</div>
+    <div class = "home-button">
+    <a href = 'add_doc/'>Add Document</a>
+    </div>
+</div>
 
 <div class = 'bar'>
   <label>Hello</label>
