--- a/Templates/docma_home.html
+++ b/Templates/docma_home.html
@@ -4,7 +4,7 @@
 <head>
    <meta  charset="UTF-8" name="viewport" content=" initial-scale= 0.6">
     <title>Welcome Home!</title>
-    <link rel="stylesheet" href="{% static 'dem/docma_viewer_styles.css' %}">
+    <link rel="stylesheet" href="{% static 'dem/docma_home_styles.css' %}">
 <!--    <link rel="stylesheet" href="{% static 'docma_static/doc_viewer_style.css' %}">-->
 
 </head>
@@ -15,8 +15,8 @@
     <a href = '/home/'>Home /</a>
     <a href = '/doc_manager/'>Document Category</a>
 </div>
-    <div class = "home">
-    <a>Add</a>
+    <div class = "home-button">
+    <a href = 'add_doc/'>Add Document</a>
     </div>
 </div>
 
