--- a/Templates/doc_manager.html
+++ b/Templates/doc_manager.html
@@ -10,42 +10,42 @@
 
 
 <body>
+
 <div class="nav-bar">
 
 <div class = "home">
     <a href = '/home/'>Home /</a>
     <a href = '/doc_manager/'>Document Category</a>
 </div>
-    <div class = "home-button">
-    <a href = 'add_doc/'>Add Document</a>
-    </div>
+<!--    <div class = "home-button">-->
+<!--    <a href = 'add_doc/'>Add Document</a>-->
+<!--    </div>-->
 </div>
 
-<div class = 'bar'>
-  <label>Hello</label>
-</div>
+<!--<div class = 'bar'>-->
+<!--  <label>Hello</label>-->
+<!--</div>-->
 <div class = 'main-box'>
 
 
   <div class = 'photo-box'>
+        <button onclick="previousImage()">Previous</button>
+    <div>
     <iframe id="displayedPdf" src="#" height = "300px"  alt="Selected Image"></iframe>
      <img id="displayedImage" class="di" src="#"  alt="Selected Image" >
-    <div class="navigation">
-    <button onclick="previousImage()">Previous</button>
-    <button onclick="nextImage()">Next</button>
-
-       <form id="uploadForm" action="/doc_manager/save/" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-<!--       <div class="choose"><input type="file" accept="image/*,.pdf"  multiple id="fileInput" name = "zile"></div>-->
-        <div class="choose">
-        <input type="file" accept="image/*,.pdf" multiple name="file" id="fileInput">
+    </div>
+          <button onclick="nextImage()">Next</button>
     </div>
 
 
-  </div>
-  </div>
-
   <div class = 'form-box'>
+
+     <form id="uploadForm" action="/doc_manager/save/" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+<!--       <div class="choose"><input type="file" accept="image/*,.pdf"  multiple id="fileInput" name = "zile"></div>-->
+        <div class="form-inputs">
+        <input type="file" accept="image/*,.pdf" multiple name="file" id="fileInput">
+    </div>
 
     <div class = 'form-inputs'>
       <label >Holder name</label>
@@ -107,7 +107,8 @@
   const selectedImages = [];
   const selectedImagestype = [];
 
-
+document.getElementById('displayedPdf').style.display = 'none';
+document.getElementById('displayedImage').style.display = 'none';
 
   function submit_data() {
          var remarks = document.getElementById('remarks').value;
