--- a/assets/dem/doc_manager.css
+++ b/assets/dem/doc_manager.css
@@ -10,7 +10,6 @@
     --font_cabin:font-family: 'Cabin', sans-serif;
 }
 
-
 body{
 color:white;
 display:flex;
@@ -44,7 +43,6 @@ width:90%;
 
 .photo-box{
 display:flex;
-flex-direction:column;
 align-items: center;
 justify-content:center;
 border-radius:3px;
@@ -64,8 +62,8 @@ justify-content:space-around;
 margin-top:2%;
 }
 .di{
-max-height : 100px;
-max-width: 100px;
+max-height : 500px;
+max-width: 400px;
 }
 
 
@@ -76,4 +74,52 @@ flex-direction:row;
 align-items: center;
 margin:10px;
 background-color:darkred;
+}
+
+
+
+
+.nav-bar{
+display:flex;
+background-color: var(--tiles-background);
+margin:10px;
+padding: 10px;
+border-radius: 10px;
+justify-content: space-between;
+padding-right:180px;
+}
+
+.home-button {
+display:flex;
+align-items:center;
+justify-content:center;
+height : 10px;
+padding:10px;
+background-color : var(--tiles-background);
+border-radius: 7px;
+}
+
+.home-button a {
+background-color : #466086;
+border-radius:10px;
+color : white;
+padding:5px;
+margin:10px;
+font-weight: bold;
+}
+
+
+
+.home{
+display:flex;
+align-items:center;
+background-color : var(--tiles-background);
+border-radius: 10px;
+justify-content :left;
+padding-left : 8px;
+}
+
+.home a {
+color : white;
+font-weight: bold;
 }
