--- a/assets/dem/docma_home_styles.css
+++ b/assets/dem/docma_home_styles.css
@@ -138,7 +138,7 @@ background-color:red;}
 margin-top:30px;
 width : 110px;
 height : 130px;
-
+color:red;
 
 
 }
@@ -149,7 +149,7 @@ opacity:90%;
 }
 .doc-card a{
 
-color:white;
+color:red;
 }
 .typetext{
 position:relative;
