--- a/Templates/dem_dashboard.html
+++ b/Templates/dem_dashboard.html
@@ -17,8 +17,8 @@
 <main class = 'big-box'>
 
     <div class = "mainbar">
-        <label>TotalSpent</label>
-        <div class = "day-group">
+        <label>TotalSpent: {{total_spent}}/-</label>
+        <div class = "mainbar-toolbox">
             <button onclick="runDataLog()">Run Data Log</button>
             <div class = 'run-datalog' id = 'run-datalog'>
                 <div class = 'popup-small'>
@@ -47,19 +47,19 @@
                     <div class = 'add_transaction-bigbox'>
                         <div class = 'add_transaction-box' >
                             <div class = 'add_transaction-row'>
-                             <label >Date</label>
+                             <label >Date *</label>
                              <input type = date id = edit_date>
                              </div>
                             <div class = 'add_transaction-row'>
-                             <label >Amount</label>
+                             <label >Amount *</label>
                              <input type = number id = edit_amount>
                              </div>
                             <div class = 'add_transaction-row'>
-                             <label >From Bank</label>
+                             <label >From Bank *</label>
                              <input type = text id = edit_from_bank>
                              </div>
                             <div class = 'add_transaction-row'>
-                             <label >To Bank</label>
+                             <label >To Bank *</label>
                              <input type = text id = edit_to_bank>
                              </div>
                             <div class = 'add_transaction-row'>
@@ -74,8 +74,12 @@
                              <input type = text id = edit_sub >
                              </div>
                             <div class = 'add_transaction-row'>
-                             <label >Category</label>
-                             <input type = text id = edit_category >
+                             <label >Category *</label>
+                              <select id="edit_category">
+                             {% for i in category_data %}
+                            <option value="{{i}}">{{i}}</option>
+                             {% endfor %}
+                        </select>
                              </div>
                             <div class = 'add_transaction-row'>
                              <label >Group</label>
@@ -95,16 +99,25 @@
         <div class = "data-box"><canvas id="donut" height = "10" width=  "10"></canvas></div>
         <div class = "graph-config">
             <button   id="day-view">Day view</button>
-            <button id="cate-view">Cat virw</button>
+            <button id="cate-view">Category view</button>
         </div>
         <div class = "graph-box">
             <canvas id="barChart"></canvas>
         </div>
     </div>
      <div class = mainbar>
-
-            <a href="/dem/non_cat/"  >Get Non Categorsied transaction</a>
-            <button onclick="groupUpdate('arg')">Group Edit</button>
+            <form method="post" action="/dem/" id = 'get_cat_trans'>
+            {% csrf_token %}
+                <label>Select category :</label>
+            <select name ="get_cat_trans">
+                <option value={{monthly_table_selecion}}>{{monthly_table_selecion}}</option>
+                 {% for i in category_data %}
+                <option value="{{i}}">{{i}}</option>
+                 {% endfor %}
+            </select>
+            <button type="button" onclick="submit_get_cat_trans()">Submit</button>
+        </form>
+            <button onclick="groupUpdate('arg')">Group Category Edit</button>
             <div id = 'multiple-edit' class = 'multiple-edit'>
                 <div class = 'popup-small'>
                     <div class = 'popup-small-head'>
@@ -113,19 +126,9 @@
                     </div>
                     <div>
                          <select id="Category">
-                            <option value="Kitchen&Groceries">Kitchen&Groceries</option>
-                            <option value="Food&Drinks">Food&Drinks</option>
-                            <option value="Home">Home</option>
-                            <option value="Body_care">Body_care</option>
-                            <option value="Travel">Travel</option>
-                            <option value="Entertainment">Entertainment</option>
-                            <option value="Bills&Payments">Bills&Payments</option>
-                            <option value="Medical">Medical</option>
-                            <option value="Clothing&shopping">Clothing&shopping</option>
-                            <option value="Investment&Savings">Investment&Savings</option>
-                             <option value="Bike">Bike</option>
-                             <option value="Wedding">Wedding</option>
-                            <option value="Others">Others</option>
+                             {% for i in category_data %}
+                            <option value="{{i}}">{{i}}</option>
+                             {% endfor %}
                         </select>
 <!--                        <input type = 'text' id = 'grp-cat'>-->
                         <button onclick= "groupUpdate('save')" >Apply Changes</button>
@@ -358,7 +361,7 @@
 
             }
         } else {
-        alert(checkedIds.length);
+        alert("select some record to perform multiple edits");
     }
 
 
@@ -449,6 +452,17 @@
     var hostname = window.location.hostname;
     var port = window.location.port;
 
+    function submit_get_cat_trans(){
+
+     var form = document.getElementById("get_cat_trans");
+        form.submit();
+
+    }
+
+
+
+
+
     if (port == ''){
     var domain = protocol + '//' + hostname+'/'
     }
@@ -459,14 +473,18 @@
     var initialApiUrl = domain+"dem/graph/cate-view";
 
     function deleteRow(id){
-        console.log(id);
-        fetch(domain+'/dem/delete/'+id+'/').then(response => response.json())
+<!--        alert("you are sure you want to delete ?");-->
+        var result = confirm("Are you sure you want to delete this record");
+        if (result) {
+           fetch(domain+'/dem/delete/'+id+'/').then(response => response.json())
         .then(data => {
                    if(data.response == 'success'){
                     location.reload(true);
                    }else{
                     alert('unable to delete row');}
                 });
+        }
+
     }
 
 
@@ -530,4 +548,14 @@
           // Replace with your initial API URL
         fetchAndRenderChart(initialApiUrl);
     });
+
+    function test(){
+    var userInput = prompt("Please enter your name:", "John Doe");
+    if (userInput !== null) {
+        // User clicked OK and entered some text
+        alert("Hello, " + userInput);
+    } else {
+        // User clicked Cancel
+    }
+    }
 </script>
