--- a/Templates/doc_manager.html
+++ b/Templates/doc_manager.html
@@ -86,7 +86,7 @@
     </div>
     <div class = 'form-inputs'>
       <label >Value / Price</label>
-      <input type="text" id = 'value' name = 'value'>
+      <input type="number" id = 'value' name = 'value'>
     </div>
     <div class = 'form-inputs'>
       <label >Start date</label>
