--- a/Templates/dem_dashboard.html
+++ b/Templates/dem_dashboard.html
@@ -19,6 +19,7 @@
     <div class = "mainbar">
         <label>TotalSpent: {{total_spent}}/-</label>
         <div class = "mainbar-toolbox">
+            <button onclick="admin_page()">Admin Pages</button>
             <button onclick="runDataLog()">Run Data Log</button>
             <div class = 'run-datalog' id = 'run-datalog'>
                 <div class = 'popup-small'>
@@ -93,6 +94,7 @@
             <button type = Button onclick="add_transaction()" >Add new transaction</button>
             <button onclick="showPopup()" >start/end group</button>
         </div>
+        <button onclick="home()">Home</button>
         </div>
     </div>
     <div class = "insights-box">
@@ -412,7 +414,8 @@
 
     function runDataLog(){
         console.log("run-datalog");
-        document.getElementById('run-datalog').style.display = 'flex';
+        alert("this functionality not available right now");
+<!--        document.getElementById('run-datalog').style.display = 'flex';-->
 
     }
 
@@ -436,7 +439,6 @@
                     alert(data.hello);
                    }
                    console.log(data.hello);
-<!--                   location.reload(true);-->
                 });
     }
 
@@ -461,9 +463,6 @@
     }
 
 
-
-
-
     if (port == ''){
     var domain = protocol + '//' + hostname+'/'
     }
@@ -473,8 +472,20 @@
 
     var initialApiUrl = domain+"dem/graph/cate-view";
 
+    function admin_page(){
+    window.location.href = domain+'/admin';
+    }
+
+
+    function home(){
+    window.location.href = domain+'/home';
+
+    }
+
+
+
+
     function deleteRow(id){
-<!--        alert("you are sure you want to delete ?");-->
         var result = confirm("Are you sure you want to delete this record");
         if (result) {
            fetch(domain+'/dem/delete/'+id+'/').then(response => response.json())
