--- a/assets/dem/dem_dashboard.css
+++ b/assets/dem/dem_dashboard.css
@@ -45,14 +45,42 @@ background-color:var(--background);
 
 .data-box{
 display:flex;
+flex-direction:column;
+justify-content:space-around;;
 align-items:center;
 background-color:pink;
 height:500px;
 width:20%;
 background-color:var(--tiles-background);
+padding-left:50px;
+padding-right:50px;
 border-radius:5px;
+color:white;
+}
+
+.budget_setting{
+padding:10px;
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:space-even;
+background-color:var(--tiles-background);
+width:100%;
+border: 1px solid grey;
+border-radius:10px;
+}
+
+.budget_setting-sub{
+display:flex;
+align-items:center;
+justify-content:space-around;
+width:100%;
+padding-bottom:10px;
+padding-top:10px;
 
 }
+
+
 .mainbar-toolbox{
 display:flex;
 background-color:var(--tiles-background);
