budget adding feature zero handling

--- a/Templates/home.html
+++ b/Templates/home.html
@@ -8,5 +8,6 @@
 <h1>I AM THE BEST</h1>
 <a href = '/dem/' >DEM</a>
 <a href = '/doc_manager/' >Doc manager</a>
+<a href = 'https://www.pythonanywhere.com/user/ServerAura/' >Python anywhere</a>
 </body>
 </html>
