--- a/Templates/doc_manager.html
+++ b/Templates/doc_manager.html
@@ -17,7 +17,7 @@
     <a href = '/home/'>Home /</a>
     <a href = '/doc_manager/'>Document Category</a>
 </div>
-<!--    <div class = "home-button">-->
+<!--    <div class = "home_styles-button">-->
 <!--    <a href = 'add_doc/'>Add Document</a>-->
 <!--    </div>-->
 </div>
