dem minor chmages on exclude category

--- a/Templates/dem_dashboard.html
+++ b/Templates/dem_dashboard.html
@@ -131,6 +131,8 @@
                  {% for i in category_data %}
                 <option value="{{i}}">{{i}}</option>
                  {% endfor %}
+                <option value="Others">Others</option>
+                <option value="all-records">AllRecords</option>
             </select>
             <button type="button" onclick="submit_get_cat_trans()">Submit</button>
         </form>
