--- a/Templates/home.html
+++ b/Templates/home.html
@@ -104,7 +104,7 @@ recognition.start();
 
 function get_output(req){
 
-var aigic_url = "https://algic.pythonanywhere.com/gemeni/";
+var aigic_url = "http://192.168.1.102:8000/gemeni/";
 
 var jsonData ={
  "ask": req
