--- a/Templates/home.html
+++ b/Templates/home.html
@@ -11,16 +11,18 @@
 
 </head>
 <body>
-<div class="concentric-circles">
-     <div class = "">
+<div class = 'heads-up'>
+      <div class = "voice">
          <div class = "voice-line"></div>
          <div class = "voice-line"></div>
          <div class = "voice-line"></div>
      </div>
-
-  <div class="circle"></div>
-  <div class="circle"></div>
-  <div class="circle"></div>
+    <div class="concentric-circles">
+      <div class="circle" id = 'circle'></div>
+      <div class="circle" id = 'loader'></div>
+      <div class="circle" id = 'breather'></div>
+        <div class="circle"></div>
+    </div>
 </div>
 <div class = 'voice-bar'>
 
@@ -30,7 +32,13 @@
         <button onclick="goto('https://www.pythonanywhere.com/user/ServerAura/')">python anywhere</button>
     </div>
      <input type = text id = 'convert_text' >
-    <button id = 'speakA'>start</button>
+    <div class = 'prompt-button'>
+        <label></label>
+       <button id = 'speakA'>Ask</button>
+         <label id =  'res_time'></label>
+
+    </div>
+
 </div>
 
 
@@ -39,9 +47,23 @@
 
 <script>
 
+
+
+
+
+
+
+
+
+
+
+
+
     function changeBackgroundColor(colour) {
     var rootStyle = document.documentElement.style;
     rootStyle.setProperty('--arc_color', colour);
+    document.getElementById('loader').classList.toggle('loading_animation');
+
 
 }
 
@@ -93,7 +115,7 @@ recognition.onend = function() {
   console.log('Speech recognition has ended.');
   convert_text.value = finalword;
   get_output(finalword);
-  changeBackgroundColor('pink');
+  changeBackgroundColor('#FF5F1F');
 
 };
 if(speech = true){
@@ -104,7 +126,11 @@ recognition.start();
 
 function get_output(req){
 
-var aigic_url = "http://192.168.1.102:8000/gemeni/";
+<!--var aigic_url = "http://192.168.1.102:8000/gemeni/";-->
+var aigic_url = "https://algic.pythonanywhere.com/gemeni/";
+
+document.getElementById('loader').classList.toggle('processing');
+
 
 var jsonData ={
  "ask": req
@@ -119,6 +145,8 @@ fetch(aigic_url , {
 })
 .then(response => response.json())
 .then(data => {
+        document.getElementById('loader').classList.toggle('processing');
+        document.getElementById('res_time').textContent = 'Res.time:'+data.response_time+'sec';
          alert(data.response);
 });
 
