--- a/assets/Aura_home/jarvis.css
+++ b/assets/Aura_home/jarvis.css
@@ -39,11 +39,18 @@ background:yellow;
   border-left: 10px solid rgba(0,0,0,0);
   border-right: 10px solid rgba(0,0,0,0);
   transform: translate(-50%, -50%);
-  animation: 5s ease 0s infinite normal none running rotateDonut;
-
 }
-@keyframes rotateDonut {
 
+.processing {
+animation: 2s ease 0s infinite normal none running processing;
+}
+
+
+.loading_animation {
+ animation: 5s ease 0s infinite normal none running rotateDonut;
+}
+
+@keyframes rotateDonut {
   0% {
 
     transform: translate(-50%, -50%) rotate(0deg);
@@ -63,6 +70,30 @@ background:yellow;
 70% {
 
     transform: translate(-50%, -50%) rotate(-180deg);
+}
+100% {
+
+    transform: translate(-50%, -50%) rotate(0deg);
+}
+}
+
+
+@keyframes processing {
+  0% {
+
+    transform: translate(-50%, -50%) rotate(0deg);
+}
+10% {
+
+    transform: translate(-50%, -50%) rotate(90deg);
+}
+20% {
+    transform: translate(-50%, -50%) rotate(180deg);
+}
+
+70% {
+
+    transform: translate(-50%, -50%) rotate(360deg);
 }
 100% {
 
@@ -164,5 +195,15 @@ height:50px;
 width:70px;
 border-radius:10px;
 
+}
+
+.prompt-button {
+display:flex;
+align-items:center;
+justify-content:space-around;
+height:50px;
+width:100%;
+margin-bottom:40px;
+color:white;
 
 }
