hard coded dem for 5 month

--- a/Templates/dem_dashboard.html
+++ b/Templates/dem_dashboard.html
@@ -95,6 +95,7 @@
             <button onclick="showPopup()" >start/end group</button>
         </div>
         <button onclick="home()">Home</button>
+            <button>Prev_month</button>
         </div>
     </div>
     <div class = "insights-box">
